@@ -2161,6 +2161,7 @@ _edje_part_recalc_single_map(Edje *ed,
                   params_write->persp.focal = persp->param1.description->persp.focal;
                }
           }
+        params_write->colors = desc->map.colors;
      }
    EINA_COW_CALC_MAP_END(params, params_write);
 }
@@ -2733,10 +2734,121 @@ _edje_physics_body_add(Edje *ed, Edje_Real_Part *rp, EPhysics_World *world)
 }
 #endif
 
+#define FINTP(_x1, _x2, _p)                     \
+        (((_x1) == (_x2))                       \
+         ? FROM_INT((_x1))                      \
+         : ADD(FROM_INT(_x1),                   \
+               SCALE((_p), (_x2) - (_x1))))
+
+#define FFP(_x1, _x2, _p)                       \
+        (((_x1) == (_x2))                       \
+         ? (_x1)                                \
+         : ADD(_x1, MUL(_p, SUB(_x2, _x1))));
+
+#define INTP(_x1, _x2, _p) TO_INT(FINTP(_x1, _x2, _p))
+
+static Eina_Bool
+map_colors_interp(Edje_Calc_Params *p1, Edje_Calc_Params *p2,
+                  Edje_Calc_Params_Map *pmap, FLOAT_T pos)
+{
+   Eina_List *l, *l2;
+   Edje_Map_Color *col, *col2, *col3;
+   Eina_Bool matched = EINA_FALSE;
+
+   if (p1->map->colors || p2->map->colors)
+     {
+        EINA_LIST_FOREACH(p1->map->colors, l, col)
+          {
+             col3 = calloc(1, sizeof(Edje_Map_Color));
+             col3->idx = col->idx;
+
+             EINA_LIST_FOREACH(p2->map->colors, l2, col2)
+               {
+                  if (col->idx != col2->idx) continue;
+                  col3->r = INTP(col->r, col2->r, pos);
+                  col3->g = INTP(col->g, col2->g, pos);
+                  col3->b = INTP(col->b, col2->b, pos);
+                  col3->a = INTP(col->a, col2->a, pos);
+                  pmap->colors = eina_list_append(pmap->colors, col3);
+                  matched = EINA_TRUE;
+                  break;
+               }
+             if (!matched)
+               {
+                  col3->r = INTP(col->r, 255, pos);
+                  col3->g = INTP(col->g, 255, pos);
+                  col3->b = INTP(col->b, 255, pos);
+                  col3->a = INTP(col->a, 255, pos);
+                  pmap->colors = eina_list_append(pmap->colors, col3);
+               }
+             matched = EINA_FALSE;
+          }
+        EINA_LIST_FOREACH(p2->map->colors, l, col)
+          {
+             EINA_LIST_FOREACH(p1->map->colors, l2, col2)
+               {
+                  if (col->idx != col2->idx) continue;
+                  matched = EINA_TRUE;
+                  break;
+               }
+             if (!matched)
+               {
+                  col3 = calloc(1, sizeof(Edje_Map_Color));
+                  col3->idx = col->idx;
+                  col3->r = INTP(255, col->r, pos);
+                  col3->g = INTP(255, col->g, pos);
+                  col3->b = INTP(255, col->b, pos);
+                  col3->a = INTP(255, col->a, pos);
+                  pmap->colors = eina_list_append(pmap->colors, col3);
+               }
+             matched = EINA_FALSE;
+          }
+        return EINA_TRUE;
+     }
+
+   return EINA_FALSE;
+}
+
+static void
+_edje_map_color_update(Evas_Map *map, const  Edje_Calc_Params_Map *pmap,
+                       Eina_Bool map_colors_free)
+{
+   Eina_List *colors = pmap->colors;
+   Edje_Map_Color *color;
+   Eina_List *l;
+
+   if (!colors)
+     {
+        evas_map_point_color_set(map, 0, 255, 255, 255, 255);
+        evas_map_point_color_set(map, 1, 255, 255, 255, 255);
+        evas_map_point_color_set(map, 2, 255, 255, 255, 255);
+        evas_map_point_color_set(map, 3, 255, 255, 255, 255);
+        return;
+     }
+
+   if (map_colors_free)
+     {
+        EINA_LIST_FREE(colors, color)
+          {
+             evas_map_point_color_set(map, color->idx, color->r, color->g,
+                                      color->b, color->a);
+             free(color);
+          }
+     }
+   else
+     {
+        EINA_LIST_FOREACH(colors, l, color)
+          {
+             evas_map_point_color_set(map, color->idx, color->r, color->g,
+                                      color->b, color->a);
+          }
+     }
+}
+
 #define Rel1X 0
 #define Rel1Y 1
-#define Rel2X 2 
-#define Rel2Y 3 
+#define Rel2X 2
+#define Rel2Y 3
 
 void
 _edje_part_recalc(Edje *ed, Edje_Real_Part *ep, int flags, Edje_Calc_Params *state)
@@ -2766,6 +2878,7 @@ _edje_part_recalc(Edje *ed, Edje_Real_Part *ep, int flags, Edje_Calc_Params *sta
    FLOAT_T pos = ZERO, pos2;
    Edje_Calc_Params lp3;
    Evas_Coord mmw = 0, mmh = 0;
+   Eina_Bool map_colors_free = EINA_FALSE;
 
    /* GRADIENT ARE GONE, WE MUST IGNORE IT FROM OLD FILE. */
    if (ep->part->type == EDJE_PART_TYPE_GRADIENT)
@@ -3127,18 +3240,6 @@ _edje_part_recalc(Edje *ed, Edje_Real_Part *ep, int flags, Edje_Calc_Params *sta
         p3->smooth = (beginning_pos) ? p1->smooth : p2->smooth;
 
         /* FIXME: do x and y separately base on flag */
-#define FINTP(_x1, _x2, _p)                     \
-        (((_x1) == (_x2))                       \
-         ? FROM_INT((_x1))                      \
-         : ADD(FROM_INT(_x1),                   \
-               SCALE((_p), (_x2) - (_x1))))
-
-#define FFP(_x1, _x2, _p)                       \
-        (((_x1) == (_x2))                       \
-         ? (_x1)                                \
-         : ADD(_x1, MUL(_p, SUB(_x2, _x1))));
-
-#define INTP(_x1, _x2, _p) TO_INT(FINTP(_x1, _x2, _p))
 
         p3->x = INTP(p1->x, p2->x, pos);
         p3->y = INTP(p1->y, p2->y, pos);
@@ -3275,6 +3376,7 @@ _edje_part_recalc(Edje *ed, Edje_Real_Part *ep, int flags, Edje_Calc_Params *sta
 
 #define MIX(P1, P2, P3, pos, info)                                      \
                   P3->info = P1->map->info + TO_INT(SCALE(pos, P2->map->info - P1->map->info));
+                  map_colors_free = map_colors_interp(p1, p2, p3_write, pos);
 
                   if (p1->lighted && p2->lighted)
                     {
@@ -3322,7 +3424,6 @@ _edje_part_recalc(Edje *ed, Edje_Real_Part *ep, int flags, Edje_Calc_Params *sta
         eina_cow_free(_edje_calc_params_physics_cow, lp2.physics);
 #endif
 #endif
-
         pf = p3;
      }
    else
@@ -3600,6 +3701,9 @@ _edje_part_recalc(Edje *ed, Edje_Real_Part *ep, int flags, Edje_Calc_Params *sta
                   evas_map_point_image_uv_set(map, 2, iw , ih );
                   evas_map_point_image_uv_set(map, 3, 0.0, ih );
                }
+
+             _edje_map_color_update(map, pf->map, map_colors_free);
+
              evas_map_util_3d_rotate(map,
                                      TO_DOUBLE(pf->map->rotation.x),
                                      TO_DOUBLE(pf->map->rotation.y),
