@@ -108,6 +108,7 @@ Additions:
      - Add edje_object_part_text_input_panel_layout_variation_set/get API
      - Add EDJE_INPUT_PANEL_LAYOUT_DATETIME layout
      - support edc proxy.source_visible, proxy.source_clip
+     - support edc map color set
     * Eeze:
      - Add a dummy libmount replacement for when libmount is not there.
     * Ecore_Con:
